# MAL4Py

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
mal/: _account.py  _anime.py  _basic.py  _media.py  _query.py  _utils.py
mal4py/: _basic.py  _media.py  _query.py  _utils.py
tests/: conftest.py  test_auth.py  test_manga.py  test_media.py  test_models.py
